@@ -1,8 +1,8 @@
 #!/bin/sh
-
-for slide in slides/*.html;
-do
-	slidename=`basename $slide`;
-	mkdir -p "po/$slidename";
-	html2po -P $slide -o "po/$slidename/template.pot";
-done;
+set -e
+for slide in slides/*.html; do
+	slidename="$(basename $slide)"
+	[ "$slidename" = "index.html" ] && continue
+	mkdir -p "po/$slidename"
+	html2po -P $slide -o "po/$slidename/template.pot"
+done
